--- a/entrypoints/options/index.html
+++ b/entrypoints/options/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Clipper hub - 设置</title>
+  <title>Clipper Hub - 设置</title>
 </head>
 
 <body>
