--- a/entrypoints/popup/index.html
+++ b/entrypoints/popup/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Clipper hub - 万能剪藏</title>
+  <title>Clipper Hub - 万能剪藏</title>
   <meta name="manifest.type" content="browser_action" />
 </head>
 
